--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,3 +4,7 @@
   year: June, 2014 &mdash; January, 2015
   # awards:
   # summary:
+  
+- degree: newones  
+  uni: Adacity
+  year: June, 2021 &mdash; January, 2022
